objects/User.object
<CustomObject>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Referrer Score</description>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_LOB_matched__c</fullName>
        <description>This field is created as part of reports. If the logged in user&apos;s LOB is equal to the users LOB, display only those records</description>
        <formula>IF ( TEXT(WT_Line_of_Business__c ) = TEXT( $User.WT_Line_of_Business__c ) , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User LOB matched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_BB_CB_Scorecard_Access__c</fullName>
        <label>BB/CB Scorecard Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager/Team Lead</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Support User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_BB_Scorecard_End_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BB Scorecard End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_BB_Scorecard_Start_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BB Scorecard Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Bank__c</fullName>
        <description>Bank number of the Employee</description>
        <label>Bank #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>WT_Fusion_Feed_Bank</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Branch__c</fullName>
        <description>Branch Number of the User</description>
        <label>Branch #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>WT_Fusion_Feed_Branch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Business_Unit_Entity__c</fullName>
        <description>reference to Business Unit Entity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Factor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CRE_Scorecard_Access__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <label>CRE Scorecard Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager/Team Lead</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Support User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_CRE_Scorecard_End_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CRE Scorecard End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_CRE_Scorecard_Exception_End_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CRE Scorecard Exception End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_CRE_Scorecard_Exception_Start_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CRE Scorecard Exception Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_CRE_Scorecard_Start_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CRE Scorecard Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_CRE_Scorecard_Team__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CRE Scorecard Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Charter__c</fullName>
        <description>Charter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Charter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Current_Scorecard__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <label>Current Scorecard</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>CB</fullName>
                </value>
                <value>
                    <fullName>CRE</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                    <isActive>false</isActive>
                    <label>CRM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Date_Welcome_Email_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Welcome Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Employee_ID__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Is_the_Duplicate_Rule_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Integration User must be Inactive.</description>
        <label>Is the Duplicate Rule Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Line_of_Business__c</fullName>
        <description>Created as a part of DBFSCRM-707</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABL</fullName>
                </value>
                <value>
                    <fullName>Agricultural Lending</fullName>
                </value>
                <value>
                    <fullName>Business Administrator</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>CCPA</fullName>
                </value>
                <value>
                    <fullName>Charter Leadership</fullName>
                </value>
                <value>
                    <fullName>Commercial Support</fullName>
                </value>
                <value>
                    <fullName>Community Advantage</fullName>
                </value>
                <value>
                    <fullName>Community Banking</fullName>
                </value>
                <value>
                    <fullName>Community Impact</fullName>
                </value>
                <value>
                    <fullName>Complaint Management</fullName>
                </value>
                <value>
                    <fullName>Consumer Lending</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>CRE</fullName>
                </value>
                <value>
                    <fullName>Deposit Application</fullName>
                </value>
                <value>
                    <fullName>First Insurance</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Funds Group</fullName>
                </value>
                <value>
                    <fullName>Government Funds</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>IT Administrator</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>MAD - Managed Assets Division</fullName>
                </value>
                <value>
                    <fullName>Middle Market</fullName>
                </value>
                <value>
                    <fullName>MyHR</fullName>
                </value>
                <value>
                    <fullName>Private Client Group</fullName>
                </value>
                <value>
                    <fullName>Professional Practice Group</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Support Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Location_Code__c</fullName>
        <description>Location code for the user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Location__c</fullName>
        <description>Location of the user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MDM_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MDM Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MM_Scorecard_Access__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <label>MM Scorecard Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager/Team Lead</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Support User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_MM_Scorecard_End_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MM Scorecard End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_MM_Scorecard_Exception_End_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MM Scorecard Exception End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_MM_Scorecard_Exception_Start_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MM Scorecard Exception Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_MM_Scorecard_Start_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MM Scorecard Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_MM_Scorecard_Team__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MM Scorecard Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <description>MSD Record ID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MSD Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Non_AD_Title__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-AD Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Officer_Number__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Type__c</fullName>
        <description>Additional Referral Type</description>
        <label>Referral Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chicago Deferred Exchange</fullName>
                </value>
                <value>
                    <fullName>Commercial Banking</fullName>
                </value>
                <value>
                    <fullName>Community Advantage</fullName>
                </value>
                <value>
                    <fullName>Community Impact</fullName>
                </value>
                <value>
                    <fullName>Consumer Lending</fullName>
                </value>
                <value>
                    <fullName>Corporate Credit Card</fullName>
                </value>
                <value>
                    <fullName>CRE</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Merchant Processing</fullName>
                </value>
                <value>
                    <fullName>Other Referral</fullName>
                </value>
                <value>
                    <fullName>Platinum Adventures</fullName>
                </value>
                <value>
                    <fullName>Retail Banking</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Small Business Lending</fullName>
                </value>
                <value>
                    <fullName>Swaps/Derivatives</fullName>
                </value>
                <value>
                    <fullName>Testing &amp; Training Referral</fullName>
                </value>
                <value>
                    <fullName>TMIS - Treasury Management Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Wintrust Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Private Client Group</fullName>
                </value>
                <value>
                    <fullName>Wintrust Mortgage</fullName>
                </value>
                <value>
                    <fullName>Wintrust Receivables Finance</fullName>
                </value>
                <value>
                    <fullName>Wealth Services</fullName>
                    <isActive>false</isActive>
                    <label>Wealth Services</label>
                </value>
                <value>
                    <fullName>Wealth – Chicago Trust</fullName>
                    <isActive>false</isActive>
                    <label>Wealth – Chicago Trust</label>
                </value>
                <value>
                    <fullName>Wealth – Corporate Plan Services</fullName>
                    <isActive>false</isActive>
                    <label>Wealth – Corporate Plan Services</label>
                </value>
                <value>
                    <fullName>Wealth – Great Lakes Advisors</fullName>
                    <isActive>false</isActive>
                    <label>Wealth – Great Lakes Advisors</label>
                </value>
                <value>
                    <fullName>Wealth – Wayne Hummer Investments</fullName>
                    <isActive>false</isActive>
                    <label>Wealth – Wayne Hummer Investments</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_User_Domain__c</fullName>
        <description>Added to capture the user Domain shyam 3/30/21 based on Sita request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Domain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_WS_Scorecard_Access__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <label>WS Scorecard Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager/Team Lead</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Support User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_WS_Scorecard_End_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WS Scorecard End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_WS_Scorecard_Start_Date__c</fullName>
        <description>Created as a part of DBSFCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WS Scorecard Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_WS_Scorecard_Team__c</fullName>
        <description>Created as a part of DBFSCRM-707</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WS Scorecard Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BranchCode__c</fullName>
        <description>The current geographical location of the user&apos;s workplace. It is expressed as a code (picklist value) that maps to the actual location object. Useful when assigning applications by location</description>
        <label>Branch (Location) Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__LocationCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Channel__c</fullName>
        <description>The channel of operation of the current user. This will be used to default to the submission</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__LocationCode__c</fullName>
        <description>The current geographical location of the user&apos;s workplace. It is expressed as a code (picklist value) that maps to the actual location object. Useful when assigning applications by location.</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__MortgageLenderId__c</fullName>
        <description>The identifier of the license or certificate issued to the user (MLO)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mortgage Lender Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Skill__c</fullName>
        <description>Captures list of skills than can be associated with an user in the system. Skills can be name of the product categories or product names or any other relevant information to filter list of users best skilled to perform certain function</description>
        <label>Skill</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__UserSkill</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>